Cleans up references to DeWi

--- a/docs/blockchain/oracles/oracles.mdx
+++ b/docs/blockchain/oracles/oracles.mdx
@@ -57,8 +57,8 @@ establish a new HNT/$USD price. To do this:
 The HNT Oracle price feeds are supplied by a group of eleven (11) Oracles, composed
 of companies, organizations, and individuals. They are:
 
-- Helium, Inc
-- Decentralized Wireless Alliance ([DEWI](https://www.dewi.org/))
+- Helium Foundation
+- Nova Labs
 - Nine (9) Anonymous Individual Community Members
 
 We’ve chosen to keep the names of the individual feed contributors anonymous as
