--- a/docs/lorawan-on-helium/frequency-plans/frequency-plans.mdx
+++ b/docs/lorawan-on-helium/frequency-plans/frequency-plans.mdx
@@ -140,7 +140,7 @@ Also known as **US902-928**
 
 ## Frequency Plans by Country
 
-Where a frequency plan is "Unknown" it means that non of the above Frequency Plans has been known to be assigned by the local telecommnications or radio authority in that country for use by LoraWAN. People in those countries are enouraged to contact the DeWi LoRaWAN Committee via #dewi in the Helium Discord, to help initiate the LoraWAN Alliance define a frequency plan for use in your country.
+Where a frequency plan is "Unknown" it means that non of the above Frequency Plans has been known to be assigned by the local telecommnications or radio authority in that country for use by LoRaWAN. People in those countries are enouraged to contact the Helium Foundation LoRaWAN Committee via #foundation in the Helium Community Discord, to help initiate the LoRaWAN Alliance define a frequency plan for use in your country.
 
 #### A <a id="a"></a>
 |Country                                     |Frequency Plan|
