--- a/docs/mine-hnt/full-hotspots/become-a-maker/hotspot-integration-testing.mdx
+++ b/docs/mine-hnt/full-hotspots/become-a-maker/hotspot-integration-testing.mdx
@@ -155,7 +155,7 @@ Once you’re ready to proceed, request a Maker account and replace the test pay
 
 :::warning
 
-Only request a Maker Account from your DeWi contact if you have passed the Hardware Audit and Certification stages.
+Only request a Maker Account from your Helium Foundation contact if you have passed the Hardware Audit and Certification stages.
 
 :::
 
@@ -227,7 +227,7 @@ Note that the blockchain WILL NOT process this transaction because the payer add
 
 ### Production
 
-Prior to production, you will have sent the list of Hotspots to the DeWi or your Helium contact to upload to the Onboarding Server on your behalf. You should also have Data Credits in your Maker account.  And if not added already, notify the Helium team to include your Maker address in the chain variable.
+Prior to production, you will have sent the list of Hotspots to the Helium Foundation or your Helium contact to upload to the Onboarding Server on your behalf. You should also have Data Credits in your Maker account.  And if not added already, notify the Helium team to include your Maker address in the chain variable.
 
 The final steps and flow for production onboarding are as follows:
 
