--- a/docs/mine-hnt/full-hotspots/become-a-maker/security-requirements.mdx
+++ b/docs/mine-hnt/full-hotspots/become-a-maker/security-requirements.mdx
@@ -22,10 +22,10 @@ derived from the public key of the `swarm_key`.
 
 :::
 
-While formalizing the audit process, DeWi has determined that the only approved
-approach to guaranteeing this at this time is using the ECC608 to generate and
-store the key during manufacturing. Other approaches are possible, but they
-would require case-by-case consideration and the potentially a third-party
+While formalizing the audit process, the Helium Foundation has determined that 
+the only approved approach to guaranteeing this at this time is using the ECC608 
+to generate and store the key during manufacturing. Other approaches are possible, 
+but they would require case-by-case consideration and the potentially a third-party
 audit.
 
 ## Securing the swarm_key with the ECC608
