--- a/docs/use-the-network/coverage-mapping/mappers-roadmap.mdx
+++ b/docs/use-the-network/coverage-mapping/mappers-roadmap.mdx
@@ -34,7 +34,7 @@ Existing devices will continue to be supported.
 ### Native Mapping App
 In association with the new BLE-based mapper, a purpose-built phone app must be developed to interface with these devices. This opens many opportunities to streamline the experience for community members joining the project.
 
-The onboarding of devices will no longer require the creation of a console account, EUI onboarding, or device flashing. Devices will be onboarded throught the app, and data credit costs may either be paid by a party like Helium, DeWi, or covered through a small in-app fee. Just pair the device with the app and it's ready to map.
+The onboarding of devices will no longer require the creation of a console account, EUI onboarding, or device flashing. Devices will be onboarded throught the app, and data credit costs may either be paid by a party like the Helium Foundation, or covered through a small in-app fee. Just pair the device with the app and it's ready to map.
 
 To make sure all mappers are up to date, software has been developed that will allow the mapping device to be updated directly through the app as the BLE mapper firmware evolves.
 
