--- a/docs/community-governance/community-governance.mdx
+++ b/docs/community-governance/community-governance.mdx
@@ -25,7 +25,7 @@ The [Helium Discord](https://discord.gg/helium) is the primary communication cha
 -   @Helium Team 👑
 -   @Wick
 -   @Moderator
--   @DeWi
+-   @Foundation
 -   @chaingang
 -   @carl-bot
 -   @Vendor
@@ -62,7 +62,7 @@ HIPs are managed entirely from the [HIP GitHub repository](https://github.com/he
 
 #### Monthly Community Calls
 
-The Helium Community holds monthly video calls (led by the [DEWI](https://www.dewi.org/)). These typically happen on the the **4th Wednesday of each month at 12PM ET**. Each call has an open agenda, and any community member can join and add items to the agenda to be discussed.
+The Helium Community holds monthly video calls (led by the [Helium Foundation](https://www.helium.foundation/)). These typically happen on the the **4th Wednesday of each month at 12PM ET**. Each call has an open agenda, and any community member can join and add items to the agenda to be discussed.
 
 -   [Community Call Notes and Agenda](https://docs.google.com/document/d/1bMm2alBigBj3detA775Dn0Gz9UM5XczAeK9vnjBB3l0/edit#)
 -   [Video recordings of all previous community calls](https://vimeo.com/dewialliance)
