--- a/docs/community-governance/community-voting.mdx
+++ b/docs/community-governance/community-voting.mdx
@@ -9,7 +9,7 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 
 # Voting on Helium
-In order to approve or deny changes to the blockchain, economics, or governance of the Helium Network; Helium and DeWi leverage on-chain voting which is open to the entire community. This on-chain voting is currently facilited through the website [helium.vote](https://helium.vote). 
+In order to approve or deny changes to the blockchain, economics, or governance of the Helium Network; The Helium Network leverages on-chain voting which is open to the entire community. This on-chain voting is currently facilited through the website [helium.vote](https://helium.vote). 
 
 For most votes, voting power is currently determined by the HNT balance of the voting wallets at a rate of one vote per HNT. However, voting power may change vote-to-vote, depending on what the community is reaching consensus on. As example, a vote on on frequency plan for a region would only concern Hotspots in the region and one would use number Hotspots in the region as votes. Proposals to implement more involved voting mechanisms have been presented, but have not been voted on or implemented yet. See: [HIP41](https://github.com/helium/HIP/blob/master/0041-governance-by-token-lock-v2.md)
 
@@ -18,11 +18,11 @@ HNT holders are able to vote by issuing a small token burn transaction from thei
 <!-- ## How to Vote -->
 
 ## Helium Vote Configuration
-This information is offered for the sake of transparency to the Helium Community and for the documentation of DeWi practices. Vote configuration is handled by DeWi to ensure that the accrued DC from a vote are burned from existance at the end of the voting period. 
+This information is offered for the sake of transparency to the Helium Community and for the documentation of Helium Foundation practices. Vote configuration is handled by the Helium Foundation to ensure that the accrued DC from a vote are burned from existance at the end of the voting period. 
 
 ### How a HIP Becomes a Vote 
 A vote can be created by opening a PR against the [Helium Vote repository](https://github.com/helium/helium-vote/). Templates are provided within the repo. Authors are encouraged to write their HIP description in a nonbiased manner, and are subject to review.
-In partnership with DeWi and Helium, a block height deadline, vote ID, and voting addresses will be provided.
+In partnership with the Helium Foundation, a block height deadline, vote ID, and voting addresses will be provided.
 
 **Create Vote ID**
 
@@ -42,7 +42,7 @@ This wallet does not need to be retained, as it will not be used for any on-chai
 
 **Create Each Vote Option**
 
-Most votes will be binary, only needing one address `for` and `against`. The wallet generation process is the same. A wallet is be created for each vote option. These wallet keys should be retained by DeWi for the sake of burning accrued DC at the end of the vote.
+Most votes will be binary, only needing one address `for` and `against`. The wallet generation process is the same. A wallet is be created for each vote option. These wallet keys should be retained by the Helium Foundation for the sake of burning accrued DC at the end of the vote.
 
 **Post Vote Cleanup**
 
