--- a/docs/faq/helium-network.mdx
+++ b/docs/faq/helium-network.mdx
@@ -50,8 +50,8 @@ Hotspot owners earn HNT depending on how frequently their devices do two things:
 ### What if I'm in a rural area, or the only Hotspot in my area? Can I still earn rewards?
 It's best to have at least one or two other Hotspots within radio range of you so that you can participate in Proof of Coverage Challenges to earn HNT rewards at a higher rate. If you are the only Hotspot in your area, you can still earn HNT if a device uses your Hotspots and by initiating the Challenges. HNT is distributed based on these economics. Read more about token economics [here](https://www.helium.com/token).
 
-### Who governs the Helium Network and what is DeWi? 
-The Decentralized Wireless Alliance (DeWi) is a global not-for-profit dedicated to the proliferation of secure, cost-effective connectivity and it manages and maintains the open technologies that support the Helium Network. You can read more about governance from DeWi [here](http://dewi.org).
+### Who governs the Helium Network and what is the Helium Foundation? 
+The Helium Foundation is a global not-for-profit dedicated to the proliferation of secure, cost-effective connectivity and it manages and maintains the open technologies that support the Helium Network. You can read more about governance from Helium Foundation [here](https://helium.foundation).
 
 ### Does the Helium community have a Discord?
 The Helium Discord is the primary communication channel for the Helium Network Community and it is the primary venue to get support for using the Network. The Helium Discord is moderated by independent members of the Helium community. 
