--- a/docs/mine-hnt/full-hotspots/become-a-maker/maker-approval-auditing.mdx
+++ b/docs/mine-hnt/full-hotspots/become-a-maker/maker-approval-auditing.mdx
@@ -7,13 +7,13 @@ slug: /mine-hnt/full-hotspots/become-a-maker/maker-approval-auditing
 
 # Maker Approval and Auditing Process
 
-Due to the overwhelming demand for Hotspots, the community designed and approved a process for adding new, verified manufactures to the ecosystem. [This is known has HIP19](https://github.com/helium/HIP/blob/master/0019-third-party-manufacturers.md). With HIP19 in place, companies can submit an application to be reviewed by the community and the [DeWi](https://www.dewi.org/).
+Due to the overwhelming demand for Hotspots, the community designed and approved a process for adding new, verified manufactures to the ecosystem. [This is known has HIP19](https://github.com/helium/HIP/blob/master/0019-third-party-manufacturers.md). With HIP19 in place, companies can submit an application to be reviewed by the community and the [Helium Foundation](https://www.helium.foundation).
 
 The full process for approving and auditing new manafacturers is as follows ([originally outlined in this blog post](https://engineering.helium.com/2021/01/26/maker-audit.html)):
 
 1. Makers submit a HIP19 Proposal.
-2. DeWi sends KYC/B request for documentation.
-3. DeWi approves KYC/B and sends hardware audit information.
+2. Helium Foundation sends KYC/B request for documentation.
+3. Helium Foundation approves KYC/B and sends hardware audit information.
 4. Makers send hardware samples for audit.
 5. Makers obtain and send regulatory radio certifications.
 *steps 4 and 5 can happen at the same time
