--- a/docs/mine-hnt/full-hotspots/full-hotspots.mdx
+++ b/docs/mine-hnt/full-hotspots/full-hotspots.mdx
@@ -15,7 +15,7 @@ Hotspots](/mine-hnt/data-only-hotspots), Full Hotspots are eligible for
 
 Full Hotspots may only be manufactured by approved **Makers**. These are
 hardware vendors that have been approved by the Helium community and the
-[DeWi](https://dewi.org). This process is governed via
+[Helium Foundation](https://helium.foundation). This process is governed via
 [Helium Improvement Proposal 19 (HIP19)](https://github.com/helium/HIP/blob/master/0019-third-party-manufacturers.md).
 
 ## Approved Makers
