update with Console Hosting Providers
console hosting providers

--- a/docs/use-the-network/console/console.mdx
+++ b/docs/use-the-network/console/console.mdx
@@ -7,7 +7,7 @@ slug: /use-the-network/console
 # Helium Console
 
 The [Helium Console](http://console.helium.com/) is a web-based device
-management tool that allows developers to register, authenticate, and manage
+management tool hosted by the Helium Foundation that allows developers to register, authenticate, and manage
 their devices on the Helium network. In addition to device management, Console
 provides prebuilt connections called Integrations to route device data via HTTPs
 or MQTT; or directly to cloud services like AWS IoT.
@@ -19,11 +19,11 @@ Device Management includes:
 - Device ID registration and seamless, secure onboarding and authentication
 - Data Credits for utilizing the Helium Network
 
-Console is available as a free to use hosted application at [console.helium.com](https://console.helium.com).
+Console is available as a free to use hosted application for demo and educational purposes (up to 10 devices) at [console.helium.com](https://console.helium.com).
 
 :::info
-Helium Console provides a way for users to easily onboard and test or demo devices on the Helium Network.
-For large deployments and commercial use, users should consider other members in the ecosystem who are hosting Console/Router instances.
+Console hosted by the Helium Foundation provides a way for users to easily onboard and test or demo devices on the Helium Network. It is capped at 10 devices and a single Organization.
+For large deployments and commercial use, users should consider Console Hosting Providers in the ecosystem [here](/use-the-network/console/hosting-providers) (note: this is not an exhaustive list, and listing does not equal endorsement).
 :::
 
 Learn more about how to get started using Console with our Tips and Tricks videos [here](https://www.youtube.com/playlist?list=PLtKQNefsR5zNjWkXqdRXeBbSmYWRJFCuo).
