--- a/docs/use-the-network/run-a-network-server/run-a-network-server.mdx
+++ b/docs/use-the-network/run-a-network-server/run-a-network-server.mdx
@@ -27,10 +27,10 @@ Before pursuing this configuration though, it is worth considering.
 **Do I need to own my own OUI and operate my own Console?**
 
 - If you are developing a few prototype devices, it might not be time to operate
-  a network server. Helium hosts and operates
-  [Console](/use-the-network/console) where you can easily manage devices for an
+  a network server. Helium Foundation hosts and operates
+  [Console](/use-the-network/console) where you can easily manage devices (up to 10) for a
   organization without dealing with OUI management; you only pay for packets and
-  new accounts start with a free 10,000 DC.
+  new accounts start with free 10,000 Data Credits. To go beyond 10 devices check out Console Hosting Providers [here](/use-the-network/console/hosting-providers).
 
 - An OUI costs $900 in Data Credits at a minimum ($100 for the OUI and $800 for
   the smallest address slab), so if that cost is prohibitive, use Helium's
