--- a/docs/use-the-network/use-the-network.mdx
+++ b/docs/use-the-network/use-the-network.mdx
@@ -63,6 +63,8 @@ channels are the two most relevant for developers using the Network.
 			<a className="block" href="/use-the-network/console/labels"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Labels</a>
 	    	<a className="block" href="/use-the-network/console/integrations"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Integrations</a>
 			<a className="block" href="/use-the-network/console/api"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Console API</a>
+			<a className="block" href="	/use-the-network/console/hosting-providers"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Console Hosting Providers</a>
+		
 	
 	    </div>
 	    <div class="col col--6"  style={{marginBottom: 100}}>
