--- a/docs/use-the-network/console/console-hosting-providers.mdx
+++ b/docs/use-the-network/console/console-hosting-providers.mdx
@@ -1,5 +1,5 @@
 ---
-id: console-hosting-providers
+id: hosting-providers
 sidebar_label: Console Hosting Providers
 slug: /use-the-network/console/hosting-providers
 ---
