--- a/docs/community-governance/community-governance.mdx
+++ b/docs/community-governance/community-governance.mdx
@@ -19,37 +19,6 @@ The [Helium Discord](https://discord.gg/helium) is the primary communication cha
 
 -   [Join the Helium Community Discord](https://discord.gg/helium)
 
-#### Discord Roles
-
--   @admin
--   @Helium Team 👑
--   @Wick
--   @Moderator
--   @DeWi
--   @chaingang
--   @carl-bot
--   @Vendor
--   @Helium Contributor
--   @Community Developer
--   @Community Designer
--   @Patron
--   @Insiders
--   @Validator
--   @Hotspot Owner
--   @Server Booster
--   @Helium Hacks Hardware Winner
--   @troll 💩
--   @Discord.RSS
--   @bot
--   @Zapier
--   @FF
--   @verified
--   @ProBot ✨
--   @Muted
--   @Quarantine
--   @Docs Contributor
--   @@everyone
-
 ### Helium Improvement Proposals
 
 The Helium Community uses a governance mechanism called **Helium Improvement Proposals** (known as "HIPs"). Modeled on BIPs from the Bitcoin community, HIPs are used to introduce, debate, and approve/reject new changes to major elements of the Network like the core blockchain, $HNT token economics, and Network governance itself.
@@ -62,7 +31,7 @@ HIPs are managed entirely from the [HIP GitHub repository](https://github.com/he
 
 #### Monthly Community Calls
 
-The Helium Community holds monthly video calls (led by the [DEWI](https://www.dewi.org/)). These typically happen on the the **4th Wednesday of each month at 12PM ET**. Each call has an open agenda, and any community member can join and add items to the agenda to be discussed.
+The Helium Community holds monthly video calls (led by the [Helium Foundation](https://www.helium.foundation/)). These typically happen on the the **4th Wednesday of each month at 12PM ET**. Each call has an open agenda, and any community member can join and add items to the agenda to be discussed.
 
 -   [Community Call Notes and Agenda](https://docs.google.com/document/d/1bMm2alBigBj3detA775Dn0Gz9UM5XczAeK9vnjBB3l0/edit#)
 -   [Video recordings of all previous community calls](https://vimeo.com/dewialliance)
