Add validator env variable information (#852)
* add validator env variable information

* direct testnet config to mainnet guide

--- a/docs/mine-hnt/validators/testnet/deployment-guide.mdx
+++ b/docs/mine-hnt/validators/testnet/deployment-guide.mdx
@@ -405,6 +405,15 @@ After running this, you'll need to input your wallet passphrase to sign the tran
 
 And with that, you're done. Congratulations! You're running a Helium Network Validator.
 
+## Overriding Default Configuration
+
+Depending on your deployment, you may wish to override default configuration such as listening addresses 
+and ports, file locations and more. See the 
+[mainnet deployment guide](/mine-hnt/validators/mainnet/deployment-guide/#overriding-default-configuration)
+for more information.
+
+
+
 ## Verifying Validator Victory
 
 Now that you're up and running with a Validator, there are a few things you can examine to make sure things are hunky dory.
