--- a/docs/blockchain/proof-of-coverage/proof-of-coverage.mdx
+++ b/docs/blockchain/proof-of-coverage/proof-of-coverage.mdx
@@ -57,9 +57,8 @@ Let's take a look at how challenges actually happen.
 
 POC Challenges involve three distinct roles:
 
-1. **Challenger** - The Hotspot that constructs and issues the POC Challenge. Hotspots issue
-challenges approximately once per every 360 blocks. (See note below)
-2. **Transmitter** - Sometimes called "Challengee". This Hotspot is the target of the POC 
+1. **Challenger** - The Validator that constructs and issues the POC Challenge. See [HIP 55](https://github.com/helium/HIP/blob/main/0055-validator-challenges.md) for further information about this change. 
+2. **Beaconer** - Sometimes called "Challengee". This Hotspot is the target of the POC 
 challenge and is responsible for transmitting (or "beaconing") challenge packets to potentially be witnessed by 
 geographically proximate Hotspots.
 3. ** Witness** - Hotspots that are geographically proximate to the Transmitter and report the existence of the 
@@ -70,7 +69,7 @@ challenge packet after it has been transmitted.
 
 ### Challenge Proof Construction and Target Selection
 
-As noted above, Hotspots are currently allowed to submit a challenge proof roughly once per 
+As noted above, Validators are currently allowed to submit a challenge proof roughly once per 
 360 blocks. They do this reliably [to earn the portion of HNT rewards allocated to challengers](/blockchain/mining). 
 The Challenger first generates an ephemeral public/private key pair to be used in the challenge. 
 A SHA256 digest of the public key and the SHA256 digest of the private key are both submitted, 
