Fix broken links caused by various movements.

--- a/docs/use-the-network/run-a-network-server/run-console.mdx
+++ b/docs/use-the-network/run-a-network-server/run-console.mdx
@@ -23,7 +23,7 @@ permissionless.
 
 Before we begin, you should have the following:
 
-- [purchased an OUI](/use-the-network/buy-an-oui) and noted its number
+- [purchased an OUI](/use-the-network/run-a-network-server/buy-an-oui) and noted its number
 - installed Docker and docker-compose (see quick-start for this in the next
 section, "Setting Up Dependencies")
 - you have some spare HNT to burn ($10-100 worth), for funding your OUI address
@@ -38,7 +38,7 @@ Optionally, you should also:
 
 - have a fully sync'ed Miner or ETL instance to extract a snapshot from. To
 learn how to setup a Miner,
-[please read here](/mine-hnt/build-a-packet-forwarder#run-the-miner).
+[please read here](/use-the-network/setup-a-packet-forwarder).
 - be able to configure ports on a firewall
 
 ### Setting up dependencies
