Update community-governance.mdx (#786)
whilst everyone is encouraged to raise hips, its best to see advice first if the hip is advisable, copied wording from hip7 here to reflect this.

--- a/docs/community-governance/community-governance.mdx
+++ b/docs/community-governance/community-governance.mdx
@@ -23,6 +23,8 @@ The [Helium Discord](https://discord.gg/helium) is the primary communication cha
 
 The Helium Community uses a governance mechanism called **Helium Improvement Proposals** (known as "HIPs"). Modeled on BIPs from the Bitcoin community, HIPs are used to introduce, debate, and approve/reject new changes to major elements of the Network like the core blockchain, $HNT token economics, and Network governance itself.
 
+In the earliest phases it's best to vet an idea with the Helium community [via Discord](https://discord.gg/helium). This is a good way to see if there is initial support for the idea, or if it's been discussed before.
+
 HIPs are managed entirely from the [HIP GitHub repository](https://github.com/helium/HIP). HIP discussion also happens in the `Improvement Proposal` section of [Helium Discord](https://discord.gg/helium). Any and all members of the Helium Community are encouraged to create HIPs, and participate in the governance process.
 
 -   [HIP Repo on GitHub](https://github.com/helium/HIP)
