--- a/docs/use-the-network/console/console-hosting-providers.mdx
+++ b/docs/use-the-network/console/console-hosting-providers.mdx
@@ -20,4 +20,4 @@ The Helium Foundation is not directly associated with any of the following vendo
 * Ubidots - Power your IoT and cloud applications with Ubidots. Sign up for beta [here](https://bit.ly/3JygTvn).
 * Foundation Console - For demo and educational purposes. Capped at 10 devices and a single Organization. Sign up [here](https://console.helium.com/).
 * Nova Console - contact sales@nova.xyz.
-
+* BrDot Console - Brazil's Console Hosting Provider. For more information contact sales@brdot.co
