poc challenge changes

--- a/docs/blockchain/blockchain-primitives/blockchain-primitives.mdx
+++ b/docs/blockchain/blockchain-primitives/blockchain-primitives.mdx
@@ -79,7 +79,7 @@ transactions:
   for mining during the next epoch.
 - `create hashed timelock` - Creates a transaction that can only be redeemed by
   providing the correct pre-image to the hashlock within the specified timelock.
-- `create proof of coverage request` - Submitted by a Miner wishing to initiate
+- `create proof of coverage request` - Submitted by a Validator wishing to initiate
   a challenge.
 - `data credits` - Burn HNT for DCs at the current oracle price and deliver them
   to the target wallet address.
