--- a/docs/use-the-network/devices/development/arduino/lora-vision-shield/lora-vision-shield.mdx
+++ b/docs/use-the-network/devices/development/arduino/lora-vision-shield/lora-vision-shield.mdx
@@ -30,11 +30,12 @@ for Always-on vision devices and applications.
 ### Resources
 
 - [Product Page](https://store.arduino.cc/portenta-vision-shield)
-- 
-- ### Firmware Quickstart Guides
 
-- [Arduino Guide](/use-the-network/devices/development/arduino/portenta-h7-with-lora-vision-shield)
+### Firmware Quickstart Guides
+
+- [Arduino Guide](/use-the-network/devices/development/arduino/lora-vision-shield/arduino.mdx)
 - 
+
 
 ### Video Guides
 
